--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <header>
-<img src="img/online-shop.jpg" alt="Logo" class="logo">
+<img src="online-shop.jpg" alt="Logo" class="logo">
+<h1>Modas Mía</h1>
 </header>
 
 
@@ -44,5 +45,6 @@
 </html>
 <body>
 <h1 style="color:red; font-size: 50px;">Jhinfer Hidalgo Shupingahua</h1>
+
 
 
